--- a/weather-app/src/styles/contentContainer.css
+++ b/weather-app/src/styles/contentContainer.css
@@ -21,9 +21,9 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 200px;
-  height: 200px;
-  border: 1px solid gray;
+  width: 250px;
+  height: 250px;
+  border: 2px solid gray;
   border-radius: 20% 20%;
   margin-right: 5px;
   margin-left: 5px;
@@ -62,14 +62,15 @@
   height: 60px;
 }
 
-.weatherButton {
+.weatherButtonList {
   margin-top: 10px;
   background-color: #1d1d1d;
   cursor: pointer;
   border-radius: 8px;
   padding: 8px;
   border: 2px solid gray;
+  transition: border-color 0.25s;
 }
-.weatherButton:hover {
+.weatherButtonList:hover {
   border-color: lightgreen;
 }/*# sourceMappingURL=contentContainer.css.map */
