--- a/weather-app/src/styles/headerContainer.css
+++ b/weather-app/src/styles/headerContainer.css
@@ -35,7 +35,7 @@
 }
 
 .mapContainer {
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -58,6 +58,7 @@
   border-radius: 4px;
   color: white;
   padding: 5px;
+  transition: border-color 0.25s;
 }
 .suggestionContainer .suggestion:hover {
   border-color: lightgreen;
