--- a/weather-app/src/styles/headerContainer.css
+++ b/weather-app/src/styles/headerContainer.css
@@ -41,9 +41,8 @@
   justify-content: center;
 }
 .mapContainer .mapsWindow {
-  text-align: left;
+  text-align: center;
   color: black;
-  font-size: 0.7em;
 }
 
 .suggestionContainer {
@@ -51,8 +50,7 @@
   margin: 0 5%;
 }
 .suggestionContainer .suggestion {
-  margin-top: 5px;
-  margin-right: 5px;
+  margin: 2px;
   background-color: #1d1d1d;
   border: 2px solid #111111;
   border-radius: 4px;
