--- a/weather-app/src/styles/headerContainer.scss
+++ b/weather-app/src/styles/headerContainer.scss
@@ -43,9 +43,8 @@
     justify-content: center;
 
     .mapsWindow {
-        text-align: left;
+        text-align: center;
         color: black;
-        font-size: 0.7em;
     }
 }
 
@@ -54,8 +53,7 @@
     margin: 0 5%;
 
     .suggestion {
-        margin-top: 5px;
-        margin-right: 5px;
+        margin: 2px;
         background-color: #1d1d1d;
         border: 2px solid #111111;
         border-radius: 4px;
