--- a/weather-app/src/styles/contentContainer.css
+++ b/weather-app/src/styles/contentContainer.css
@@ -41,8 +41,12 @@
   font-weight: 500;
 }
 .weatherList .weather .date {
-  font-size: 0.9em;
+  margin-top: -10px;
+  font-size: 0.75em;
   font-weight: 100;
+}
+.weatherList .weather .weekday {
+  font-weight: 500;
 }
 .weatherList .weather .temperature {
   display: flex;
@@ -51,15 +55,15 @@
   font-weight: 500;
 }
 .weatherList .weather .temperature .max {
-  color: #fcbdbd;
+  color: #db6565;
 }
 .weatherList .weather .temperature .min {
-  color: #c3bdfc;
+  color: #7f7bed;
 }
 .weatherList img {
   margin-top: -5px;
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
 }
 
 .weatherButtonList {
