--- a/weather-app/src/styles/contentContainer.scss
+++ b/weather-app/src/styles/contentContainer.scss
@@ -37,16 +37,22 @@
             letter-spacing: 1px;
         }
 
-        .region {
+        .region{
             margin-top: -10px;
             font-size: 0.8em;
             font-weight: 500;
         }
 
-        .date {
-            font-size: 0.9em;
+        .date{
+            margin-top: -10px;
+            font-size: 0.75em;
             font-weight: 100;
         }
+
+        .weekday {
+            font-weight: 500;
+        }
+
 
         .temperature {
             display: flex;
@@ -55,19 +61,19 @@
             font-weight: 500;
 
             .max {
-                color: #fcbdbd;
+                color: #db6565;
             }
 
             .min {
-                color: #c3bdfc;
+                color: #7f7bed;
             }
         }
     }
     
     img {
         margin-top: -5px;
-        width: 60px;
-        height: 60px;
+        width: 70px;
+        height: 70px;
     }
 }
 
