--- a/weather-app/src/styles/headerContainer.scss
+++ b/weather-app/src/styles/headerContainer.scss
@@ -7,32 +7,29 @@
 
 .searchContainer {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    padding: 2%;
-}
+    margin-bottom: 8px;
 
-.searchBox {
-    display: flex;
-    width: 70%;
-    border-radius: 8px;
-    border: 1px solid white;
-    padding: 5px;
-    padding-right: 10px;
-}
-
-
-.searchButton  {
-    margin-left: -5%;
-    height: 28px;
-    width: 20%;
-    border-radius: 0 8px 8px 0;
-    border: 2px solid white;
-    background-color: black;
-    cursor: pointer;
-    transition: border-color 0.25s;
-
-    &:hover {
-        border-color: lightgreen;
+    .searchBox {
+        display: flex;
+        width: 70%;
+        border-radius: 8px 0 0 8px;
+        border: 1px solid white;
+        padding: 5px;
+    }
+    .searchButton  {
+        height: 28px;
+        width: 20%;
+        border-radius: 0 8px 8px 0;
+        border: 2px solid white;
+        background-color: black;
+        cursor: pointer;
+        transition: border-color 0.25s;
+        margin-left: -2px;
+        &:hover {
+            border-color: lightgreen;
+        }
     }
 }
 
