--- a/weather-app/src/styles/contentContainer.css
+++ b/weather-app/src/styles/contentContainer.css
@@ -23,11 +23,12 @@
   align-items: center;
   width: 250px;
   height: 250px;
-  border: 2px solid gray;
+  border: 1px solid gray;
   border-radius: 20% 20%;
   margin-right: 5px;
   margin-left: 5px;
   margin-top: 10px;
+  box-shadow: 0 0 10px 0 black;
 }
 .weatherList .weather .city {
   margin-top: -8px;
@@ -74,6 +75,7 @@
   padding: 8px;
   border: 2px solid gray;
   transition: border-color 0.25s;
+  box-shadow: 0 2px 8px 0 black;
 }
 .weatherButtonList:hover {
   border-color: lightgreen;
