--- a/weather-app/src/styles/headerContainer.scss
+++ b/weather-app/src/styles/headerContainer.scss
@@ -13,7 +13,7 @@
 
     .searchBox {
         display: flex;
-        width: 70%;
+        width: 62%;
         border-radius: 8px 0 0 8px;
         border: 1px solid white;
         padding: 5px;
@@ -40,8 +40,22 @@
     justify-content: center;
 
     .mapsWindow {
-        text-align: center;
         color: black;
+        text-align: left;
+
+        p, h4 {
+            margin: 5px 0;
+        }
+
+        .heartIcon {
+            pointer-events:stroke;
+            cursor: pointer;
+            &:hover {
+                stroke: lightgreen;
+                transform: scale(1.4);
+                transform-origin: 35% 50%;
+            }
+        }
     }
 }
 
