--- a/weather-app/src/styles/contentContainer.scss
+++ b/weather-app/src/styles/contentContainer.scss
@@ -23,14 +23,15 @@
         justify-content: space-around;
         align-items: center;
 
-        width: 250px;
-        height: 250px;
+        width: 225px;
+        height: 225px;
         border: 1px solid gray;
         border-radius: 20% 20%;
         margin-right: 5px;
         margin-left: 5px;
         margin-top: 10px;
         box-shadow: 6px 5px 15px 0 black;
+        transition: all 5s;
 
         .city {
             margin-top: -8px;
@@ -85,7 +86,7 @@
     border-radius: 8px;
     padding: 8px;
     border: 2px solid gray;
-    transition: border-color 0.25s;
+    transition: all 0.2s;
     box-shadow: 0 5px 15px 0 black;
 
     &:hover {
@@ -95,16 +96,16 @@
     }
 }
 
-
 .favoritesHeartContainer {
     .heartIcon {
         margin-top: 10px;
         border: 2px solid gray;
-        padding: 4px;
+        padding: 2px;
         border-radius: 8px;
         box-shadow: 0 5px 15px 0 black;
         pointer-events:stroke;
         cursor: pointer;
+        transition: all 0.2s;
         &:hover {
             border-color: lightgreen;
             transform: scale(1.2);
@@ -121,7 +122,7 @@
     flex-wrap: wrap;
     width: 60%;
     height: auto;
-    margin-top: 10px;
+    margin-top: 3px;
 
     .favorite {
         font-size: 0.75em;
